@@ -139,6 +139,10 @@ gdb/testsuite/ChangeLog
 
 2021-06-21  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* gdb.base/inline-frame-bad-unwind.exp: Add an extra test.
+
+2021-05-29  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* gdb.base/inline-frame-bad-unwind.c: New file.
 	* gdb.base/inline-frame-bad-unwind.exp: New file.
 	* gdb.base/inline-frame-bad-unwind.py: New file.
